# SentimentAnalysis

./: .gitignore  CMakeLists.txt  DataDTO.cpp  DataDTO.h  JPString.cpp  JPString.h  StopWordList.csv  Target.csv  TargetDTO.cpp  TargetDTO.h  Test.csv  main.cpp
.github/workflows/: build.yaml
